feat: View all user details
